load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "mock_silaengine_client.go",
        "mock_sila_chain.go",
        "mock_faulty_powchain.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/beacon-chain/silaexec/testing",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//api/server/structs:go_default_library",
        "//async/event:go_default_library",
        "//beacon-chain/core/peerdas:go_default_library",
        "//beacon-chain/silaexec/types:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/payload-attribute:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/silaengine/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "@com_github_sila_chain_sila//common:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
        "@com_github_sila_chain_sila//core/types:go_default_library",
        "@com_github_sila_chain_sila//silaclient/simulated:go_default_library",
        "@com_github_sila_chain_sila//rpc:go_default_library",
        "@com_github_holiman_uint256//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
